--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,11 @@ spring.data.elasticsearch.repositories.enabled= false
 spring.main.allow-circular-references= true
 cbs.imagesPath=E:/res/
 #cbs.imagesPath=/final/res/
+
+#jwt:
+#secretKey: mobileZnysStation
+#expire: 12
+#header: Authorization
+jwt.expire=12
+jwt.header=Authorization
+jwt.secretKey=mobileZnysStation
