--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,8 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=false
 spring.jpa.open-in-view=false
 spring.jpa.hibernate.ddl-auto=update
-
+# ????
+logging.level.org.hibernate.SQL=DEBUG
 spring.data.redis.repositories.enabled= false
 spring.data.elasticsearch.repositories.enabled= false
 spring.main.allow-circular-references= true
