课程学生导入

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,13 +3,14 @@ spring.thymeleaf.check-template-location=false
 #spring.datasource.url=jdbc:mysql://116.62.32.208/edu
 spring.datasource.url=jdbc:mysql://localhost/edu
 spring.datasource.username=root
-#spring.datasource.password=1
-spring.datasource.password=12345678
+spring.datasource.password=1
+#spring.datasource.password=12345678
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=false
 spring.jpa.open-in-view=false
 spring.jpa.hibernate.ddl-auto=update
-# ????
+
+
 logging.level.org.hibernate.SQL=DEBUG
 spring.data.redis.repositories.enabled= false
 spring.data.elasticsearch.repositories.enabled= false
