--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,11 +7,12 @@ spring.datasource.password=1
 #spring.datasource.password=12345678
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=false
-spring.jpa.open-in-view=false
+spring.jpa.open-in-view=true
 spring.jpa.hibernate.ddl-auto=update
 
+spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 
-logging.level.org.hibernate.SQL=DEBUG
+#logging.level.org.hibernate.SQL=DEBUG
 spring.data.redis.repositories.enabled= false
 spring.data.elasticsearch.repositories.enabled= false
 spring.main.allow-circular-references= true
