--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,8 +16,8 @@ spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 spring.data.redis.repositories.enabled= false
 spring.data.elasticsearch.repositories.enabled= false
 spring.main.allow-circular-references= true
-#cbs.imagesPath=E:/res/
-cbs.imagesPath=/final/res/
+cbs.imagesPath=E:/res/
+#cbs.imagesPath=/final/res/
 
 #jwt:
 #secretKey: mobileZnysStation
