--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,7 +11,7 @@ spring.jpa.open-in-view=true
 spring.jpa.hibernate.ddl-auto=update
 spring.sql.init.data-locations=classpath:user_role.sql
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
-logging.level.org.springframework.jdbc=debug
+#logging.level.org.springframework.jdbc=debug
 #logging.level.org.hibernate.SQL=DEBUG
 spring.data.redis.repositories.enabled= false
 spring.data.elasticsearch.repositories.enabled= false
