--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,23 +1,26 @@
+# ?? Thymeleaf ????????????????????
 spring.thymeleaf.check-template=false
 spring.thymeleaf.check-template-location=false
-#spring.datasource.url=jdbc:mysql://116.62.32.208/edu
-spring.datasource.url=jdbc:mysql://localhost/edu
+#????? URL???????????MySQL?????localhost????????edu?
+spring.datasource.url=jdbc:mysql://116.62.32.208/edu
 spring.datasource.username=root
-spring.datasource.password=1
-#spring.datasource.password=12345678
+spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+# ???????? SQL ?????? false ????????????
 spring.jpa.show-sql=false
+# ???? Open-in-View ?????????????????????? true
 spring.jpa.open-in-view=true
+# Hibernate ???????????????? update ???????????????????
 spring.jpa.hibernate.ddl-auto=update
-spring.sql.init.data-locations=classpath:user_role.sql
+# ??????????????????? true ?????????????????
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
-#logging.level.org.springframework.jdbc=debug
-#logging.level.org.hibernate.SQL=DEBUG
-spring.data.redis.repositories.enabled= false
-spring.data.elasticsearch.repositories.enabled= false
+
+#Hibernate SQL ???????? DEBUG ????????? Hibernate ??? SQL ??
+logging.level.org.hibernate.SQL=DEBUG
+# ???????????? true ?????????? @OneToMany ??
 spring.main.allow-circular-references= true
-cbs.imagesPath=E:/res/
-#cbs.imagesPath=/final/res/
+#cbs.imagesPath=E:/res/
+cbs.imagesPath=/final/res/
 #jwt:
 #secretKey: mobileZnysStation
 #expire: 12
