--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,12 @@
 # ?? Thymeleaf ????????????????????
 spring.thymeleaf.check-template=false
 spring.thymeleaf.check-template-location=false
-#????? URL???????????MySQL?????localhost????????edu?
+
 spring.datasource.url=jdbc:mysql://116.62.32.208/edu
+#spring.datasource.url=jdbc:mysql://localhost/edu
 spring.datasource.username=root
+#spring.datasource.password=1
+
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 # ???????? SQL ?????? false ????????????
@@ -19,8 +22,12 @@ spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 logging.level.org.hibernate.SQL=DEBUG
 # ???????????? true ?????????? @OneToMany ??
 spring.main.allow-circular-references= true
-#cbs.imagesPath=E:/res/
-cbs.imagesPath=/final/res/
+
+cbs.imagesPath=E:/res/
+
+#cbs.imagesPath=/usr/res
+#cbs.imagesPath=/final/res/
+
 #jwt:
 #secretKey: mobileZnysStation
 #expire: 12
