--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,7 +19,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 
 #Hibernate SQL ???????? DEBUG ????????? Hibernate ??? SQL ??
-logging.level.org.hibernate.SQL=DEBUG
+#logging.level.org.hibernate.SQL=DEBUG
 # ???????????? true ?????????? @OneToMany ??
 spring.main.allow-circular-references= true
 
